--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       content="Projet d'étude visant a améliorer le site existant au niveau seo et accessiblité"
     />
     <title>Optimisez un site web existant</title>
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="style.css" />
     <link rel="shortcut icon" href="./img/favicon.png" />
   </head>
   <body>
