--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
         <div class="liensite">
           <a
             aria-label="site avant optimisation"
-            href="./Starting website/index.html"
+            href="https://braconnier.github.io/Starting-website/"
             target="_blank"
             >site avant optimisation</a
           >
           <a
             aria-label="site aprés optimisation"
-            href="./Revised website/index.html"
+            href="https://braconnier.github.io/Revised-website/"
             target="_blank"
             >site aprés optimisation</a
           >
