--- a/index.html
+++ b/index.html
@@ -82,12 +82,16 @@
             <img src="./img/gt-metrix-50.png" alt="logo gt-metrix" />
             <ul class="gtmetrix">
               <li>
-                <a aria-label="gtmetrix page d'accueil" href=""
+                <a
+                  aria-label="gtmetrix page d'accueil"
+                  href="https://gtmetrix.com/reports/braconnier.github.io/kwQ9HlkA/"
                   >gtmetrix page d'accueil</a
                 >
               </li>
               <li>
-                <a aria-label="gtmetrix page de contact" href=""
+                <a
+                  aria-label="gtmetrix page de contact"
+                  href="https://gtmetrix.com/reports/braconnier.github.io/H5vAAzwV/"
                   >gtmetrix page de contact</a
                 >
               </li>
@@ -114,18 +118,40 @@
             <img src="./img/gt-metrix-50.png" alt="logo gt-metrix" />
             <ul class="gtmetrix">
               <li>
-                <a aria-label="gtmetrix page d'accueil" href=""
+                <a
+                  aria-label="gtmetrix page d'accueil"
+                  href="https://gtmetrix.com/reports/braconnier.github.io/5WoEUgqQ/"
                   >gtmetrix page d'accueil</a
                 >
               </li>
               <li>
-                <a aria-label="gtmetrix page de contact" href=""
+                <a
+                  aria-label="gtmetrix page de contact"
+                  href="https://gtmetrix.com/reports/braconnier.github.io/E35vOlZI/"
                   >gtmetrix page de contact</a
                 >
               </li>
             </ul>
           </div>
         </div>
+      </section>
+      <section class="commun">
+        <ul>
+          <li>
+            <a
+              aria-label="gtmetrix comparaison de la page d'accueil"
+              href="https://gtmetrix.com/compare/5WoEUgqQ/kwQ9HlkA"
+              >gtmetrix comparaison de la page d'accueil</a
+            >
+          </li>
+          <li>
+            <a
+              aria-label="gtmetrix comparaison de la page de contact"
+              href="https://gtmetrix.com/compare/E35vOlZI/H5vAAzwV"
+              >gtmetrix page de contact</a
+            >
+          </li>
+        </ul>
       </section>
     </main>
     <footer><p class="textfooter">Projet débuté le 05/09/2021</p></footer>
