lien et remise en forem

--- a/index.html
+++ b/index.html
@@ -30,12 +30,14 @@
             aria-label="site avant optimisation"
             href="https://braconnier.github.io/Starting-website/"
             target="_blank"
+            rel="noopener, noreferrer"
             >site avant optimisation</a
           >
           <a
             aria-label="site aprés optimisation"
             href="https://braconnier.github.io/Revised-website/"
             target="_blank"
+            rel="noopener, noreferrer"
             >site aprés optimisation</a
           >
         </div>
@@ -46,7 +48,7 @@
               aria-label="tableau audit"
               href="https://1drv.ms/x/s!Av2GZIcZhfEf31Czn65QM6E8x2QU?e=8sPWJJ"
               target="_blank"
-              rel="noreferrer"
+              rel="noopener, noreferrer"
               >tableau audit</a
             >
           </li>
@@ -56,6 +58,7 @@
               aria-label="étude comparative"
               href="./étude rev/etude-seo-access-la-chouette-agence/lighthouse rapport.pdf"
               target="blank"
+              rel="noopener, noreferrer"
               >étude comparative</a
             >
           </li>
@@ -63,7 +66,7 @@
       </section>
       <section class="comparatif">
         <div class="comparatif__bloc">
-          <div class="bloc_liens">
+          <div class="bloc_liens_av">
             <img src="./img/lighthouse-50.png" alt="logo google lighthouse" />
             <ul class="lighthouse">
               <li>
@@ -78,20 +81,24 @@
               </li>
             </ul>
           </div>
-          <div class="bloc_liens">
+          <div class="bloc_liens_av">
             <img src="./img/gt-metrix-50.png" alt="logo gt-metrix" />
             <ul class="gtmetrix">
               <li>
                 <a
-                  aria-label="gtmetrix page d'accueil"
+                  aria-label="gtmetrix page d'accueil avant optimisation"
                   href="https://gtmetrix.com/reports/braconnier.github.io/kwQ9HlkA/"
+                  target="_blank"
+                  rel="noopener, noreferrer"
                   >gtmetrix page d'accueil</a
                 >
               </li>
               <li>
                 <a
-                  aria-label="gtmetrix page de contact"
+                  aria-label="gtmetrix page de contact avant optimisation"
                   href="https://gtmetrix.com/reports/braconnier.github.io/H5vAAzwV/"
+                  target="_blank"
+                  rel="noopener, noreferrer"
                   >gtmetrix page de contact</a
                 >
               </li>
@@ -99,8 +106,7 @@
           </div>
         </div>
         <div class="comparatif__bloc">
-          <div class="bloc_liens">
-            <img src="./img/lighthouse-50.png" alt="logo google lighthouse" />
+          <div class="bloc_liens_ap">
             <ul class="lighthouse">
               <li>
                 <a aria-label="lighthouse page d'accueil" href=""
@@ -113,45 +119,57 @@
                 >
               </li>
             </ul>
+            <img src="./img/lighthouse-50.png" alt="logo google lighthouse" />
           </div>
-          <div class="bloc_liens">
-            <img src="./img/gt-metrix-50.png" alt="logo gt-metrix" />
+          <div class="bloc_liens_ap">
             <ul class="gtmetrix">
               <li>
                 <a
-                  aria-label="gtmetrix page d'accueil"
+                  aria-label="gtmetrix page d'accueil après optimisation"
                   href="https://gtmetrix.com/reports/braconnier.github.io/5WoEUgqQ/"
+                  target="_blank"
+                  rel="noopener, noreferrer"
                   >gtmetrix page d'accueil</a
                 >
               </li>
               <li>
                 <a
-                  aria-label="gtmetrix page de contact"
+                  aria-label="gtmetrix page de contact après optimisation"
                   href="https://gtmetrix.com/reports/braconnier.github.io/E35vOlZI/"
+                  target="_blank"
+                  rel="noopener, noreferrer"
                   >gtmetrix page de contact</a
                 >
               </li>
             </ul>
+            <img src="./img/gt-metrix-50.png" alt="logo gt-metrix" />
           </div>
         </div>
       </section>
-      <section class="commun">
-        <ul>
-          <li>
-            <a
-              aria-label="gtmetrix comparaison de la page d'accueil"
-              href="https://gtmetrix.com/compare/5WoEUgqQ/kwQ9HlkA"
-              >gtmetrix comparaison de la page d'accueil</a
-            >
-          </li>
-          <li>
-            <a
-              aria-label="gtmetrix comparaison de la page de contact"
-              href="https://gtmetrix.com/compare/E35vOlZI/H5vAAzwV"
-              >gtmetrix page de contact</a
-            >
-          </li>
-        </ul>
+      <section class="compare_gtmetrix">
+        <img src="./img/gt-metrix-50.png" alt="logo gt-metrix" />
+        <div class="bloc_liens">
+          <ul>
+            <li>
+              <a
+                aria-label="gtmetrix comparaison de la page d'accueil"
+                href="https://gtmetrix.com/compare/5WoEUgqQ/kwQ9HlkA"
+                target="_blank"
+                rel="noopener, noreferrer"
+                >gtmetrix comparaison de la page d'accueil</a
+              >
+            </li>
+            <li>
+              <a
+                aria-label="gtmetrix comparaison de la page de contact"
+                href="https://gtmetrix.com/compare/E35vOlZI/H5vAAzwV"
+                target="_blank"
+                rel="noopener, noreferrer"
+                >gtmetrix comparaison de la page de contact</a
+              >
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer><p class="textfooter">Projet débuté le 05/09/2021</p></footer>
