suppress lien pdf

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
             <img src="./img/pdf50.png" alt="logo pdf" />
             <a
               aria-label="étude comparative"
-              href="./étude rev/etude-seo-access-la-chouette-agence/lighthouse rapport.pdf"
-              target="blank"
+              href=""
+              target="_blank"
               rel="noopener, noreferrer"
               >étude comparative</a
             >
