--- a/index.html
+++ b/index.html
@@ -70,12 +70,20 @@
             <img src="./img/lighthouse-50.png" alt="logo google lighthouse" />
             <ul class="lighthouse">
               <li>
-                <a aria-label="lighthouse page d'accueil" href=""
+                <a
+                  aria-label="lighthouse page d'accueil"
+                  href="./étude rev/etude-seo-access-la-chouette-agence/braconnier.github.io-20210917T180100_lh_i_av.html"
+                  target="_blank"
+                  rel="noopener, noreferrer"
                   >lighthouse page d'accueil</a
                 >
               </li>
               <li>
-                <a aria-label="lighthouse page de contact" href=""
+                <a
+                  aria-label="lighthouse page de contact"
+                  href="./étude rev/etude-seo-access-la-chouette-agence/braconnier.github.io-20210917T180327_lh_c_av.html"
+                  target="_blank"
+                  rel="noopener, noreferrer"
                   >lighthouse page de contact</a
                 >
               </li>
@@ -109,12 +117,24 @@
           <div class="bloc_liens_ap">
             <ul class="lighthouse">
               <li>
-                <a aria-label="lighthouse page d'accueil" href=""
+                <a
+                  aria-label="lighthouse page d'accueil"
+                  href="./étude rev/etude-seo-access-la-chouette-agence/braconnier.github.io-20210917T180431-lh_i_ap.html"
+                  target="_blank"
+                  rel="noopener, noreferrer"
+                  target="_blank"
+                  rel="noopener, noreferrer"
                   >lighthouse page d'accueil</a
                 >
               </li>
               <li>
-                <a aria-label="lighthouse page de contact" href=""
+                <a
+                  aria-label="lighthouse page de contact"
+                  href="./étude rev/etude-seo-access-la-chouette-agence/braconnier.github.io-20210917T180539_lh_c_ap.html"
+                  target="_blank"
+                  rel="noopener, noreferrer"
+                  target="_blank"
+                  rel="noopener, noreferrer"
                   >lighthouse page de contact</a
                 >
               </li>
