--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
               <li>
                 <a
                   aria-label="lighthouse page d'accueil"
-                  href="./étude rev/etude-seo-access-la-chouette-agence/braconnier.github.io-20210917T180100_lh_i_av.html"
+                  href="./étude rev/etude-seo-access-la-chouette-agence/braconnier.github.io_2021-09-17_18-41-21.html"
                   target="_blank"
                   rel="noopener, noreferrer"
                   >lighthouse page d'accueil</a
