--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
               <li>
                 <a
                   aria-label="lighthouse page d'accueil"
-                  href="./étude rev/etude-seo-access-la-chouette-agence/braconnier.github.io-20210917T195154-lh-i-av.html"
+                  href="./pages/braconnier.github.io-20210917T195154-lh-i-av.html"
                   target="_blank"
                   rel="noopener, noreferrer"
                   >lighthouse page d'accueil</a
@@ -81,7 +81,7 @@
               <li>
                 <a
                   aria-label="lighthouse page de contact"
-                  href="./étude rev/etude-seo-access-la-chouette-agence/braconnier.github.io-20210917T195227_lh_c_av.html"
+                  href="./pages/braconnier.github.io-20210917T195227_lh_c_av.html"
                   target="_blank"
                   rel="noopener, noreferrer"
                   >lighthouse page de contact</a
@@ -119,7 +119,7 @@
               <li>
                 <a
                   aria-label="lighthouse page d'accueil"
-                  href="./étude rev/etude-seo-access-la-chouette-agence/braconnier.github.io-20210917T195311_lh_i_ap.html"
+                  href="./pages/braconnier.github.io-20210917T195311_lh_i_ap.html"
                   target="_blank"
                   rel="noopener, noreferrer"
                   target="_blank"
@@ -130,7 +130,7 @@
               <li>
                 <a
                   aria-label="lighthouse page de contact"
-                  href="./étude rev/etude-seo-access-la-chouette-agence/braconnier.github.io-20210917T195346_lh_c_ap.html"
+                  href="./pages/braconnier.github.io-20210917T195346_lh_c_ap.html"
                   target="_blank"
                   rel="noopener, noreferrer"
                   target="_blank"
