update index and links

--- a/index.html
+++ b/index.html
@@ -119,9 +119,7 @@
               <li>
                 <a
                   aria-label="lighthouse page d'accueil"
-                  href="./pages/braconnier.github.io-20210917T195311_lh_i_ap.html"
-                  target="_blank"
-                  rel="noopener, noreferrer"
+                  href="./pages/braconnier.github.io-20210922T164333-lh-i-ap.html"
                   target="_blank"
                   rel="noopener, noreferrer"
                   >lighthouse page d'accueil</a
@@ -131,8 +129,6 @@
                 <a
                   aria-label="lighthouse page de contact"
                   href="./pages/braconnier.github.io-20210917T195346_lh_c_ap.html"
-                  target="_blank"
-                  rel="noopener, noreferrer"
                   target="_blank"
                   rel="noopener, noreferrer"
                   >lighthouse page de contact</a
@@ -146,7 +142,7 @@
               <li>
                 <a
                   aria-label="gtmetrix page d'accueil après optimisation"
-                  href="https://gtmetrix.com/reports/braconnier.github.io/5WoEUgqQ/"
+                  href="https://gtmetrix.com/reports/braconnier.github.io/mh9O6FNe/"
                   target="_blank"
                   rel="noopener, noreferrer"
                   >gtmetrix page d'accueil</a
@@ -173,7 +169,7 @@
             <li>
               <a
                 aria-label="gtmetrix comparaison de la page d'accueil"
-                href="https://gtmetrix.com/compare/5WoEUgqQ/kwQ9HlkA"
+                href="https://gtmetrix.com/compare/mh9O6FNe/aZpKzxwN"
                 target="_blank"
                 rel="noopener, noreferrer"
                 >gtmetrix comparaison de la page d'accueil</a
