--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <img src="./img/pdf50.png" alt="logo pdf" />
             <a
               aria-label="lien vers le PDF de l'étude comparative"
-              href="./étude rev/etude-seo-access-la-chouette-agence/rapport d'étude.pdf"
+              href="./img/rapport d'étude.pdf"
               target="_blank"
               rel="noopener, noreferrer"
               >étude comparative</a
