--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
             >site avant optimisation</a
           >
           <a
-            aria-label="site aprés optimisation"
+            aria-label="site après optimisation"
             href="https://braconnier.github.io/Revised-website/"
             target="_blank"
             rel="noopener, noreferrer"
-            >site aprés optimisation</a
+            >site après optimisation</a
           >
         </div>
         <ul>
